[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
core_2pc = { path = "../core_2pc" }
tokio-postgres = "0.7.8"
deadpool-postgres = "0.10.5"
