[package]
name = "element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tokio-postgres = "0.7.8"
core_2pc = { path = "../core_2pc" }
deadpool-postgres = "0.10.5"
